--- a/src/index.css
+++ b/src/index.css
@@ -22,5 +22,14 @@ img {
   padding: 0 0.7rem;
 }
 .sections-y-separate {
-  margin: 10rem auto;
+  margin: 7rem auto;
+}
+.small-header {
+  font-size: 2.25rem /* 36px */;
+  line-height: 2.5rem /* 40px */;
+  font-weight: 700;
+  text-wrap: balance;
+}
+.scalable-text {
+  font-size: clamp(1rem, 2vw, 1.5rem);
 }
