--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 img {
   width: 100%;
   height: auto;
+  object-fit: cover;
+  display: block;
 }
 
 .two-cols-grid {
@@ -22,7 +24,7 @@ img {
   padding: 0 0.7rem;
 }
 .sections-y-separate {
-  margin: 7rem auto;
+  margin: 6.2rem auto;
 }
 .small-header {
   font-size: 2.25rem /* 36px */;
