--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .accent-text {
+    @apply text-accent font-medium;
+  }
+}
+
 img {
   width: 100%;
   height: auto;
